--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -15,7 +15,7 @@
         </div>
         <!-- slider-button end -->
 
-        {{ range $idx, $p := .Pages | first 3 }}
+        {{ range $idx, $p := .Pages.ByDate.Reverse | first 3 }}
         <!-- single slider start  -->
         <div class="single-blog {{if eq $idx 0}}show{{end}}">
 
@@ -116,7 +116,7 @@
       <div class="column is-9">
         <div class="columns is-multiline">
 
-          {{ range $idx, $p := .Pages }}
+          {{ range $idx, $p := .Pages.ByDate.Reverse }}
           <!-- single blog start  -->
           <div class="column is-one-third-fullhd is-half-tablet is-one-third-desktop" data-aos="fade-up">
             <div class="single-blog-item">
