--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -88,7 +88,7 @@
       <div class="column is-9">
         <div class="columns is-multiline">
 
-          {{ range $idx, $p := .Pages.ByDate.Reverse }}
+          {{ range $idx, $p := .RegularPages.ByDate.Reverse }}
           <!-- single blog start  -->
           <div class="column is-one-third-fullhd is-half-tablet is-one-third-desktop" data-aos="fade-up">
             <div class="single-blog-item">
