--- a/static/assets/sass/components/_cta-area.scss
+++ b/static/assets/sass/components/_cta-area.scss
@@ -1,6 +1,6 @@
 // cta area start
 .cta-area {
-  background-image: url(../images/bg-image/cta-bg.webp);
+  background-image: url(../images/bg-image/cta-bg.png);
   background-repeat: repeat;
   background-color: $primary-color;
   .section-title.is-dark-bg {
