--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -175,8 +175,8 @@
               <!-- subscription area start  -->
               <div class="subscription-form">
                   <form
-                    action="https://appscode.us17.list-manage.com/subscribe/post?u=feb2bf31969a951e7449048a3&amp;id=82fb19acb9"
                     method="post"
+                    action="https://listmonk.appscode.com/subscription/form"
                     id="mc-embedded-subscribe-form"
                     name="mc-embedded-subscribe-form"
                     class="navbar-form"
@@ -190,9 +190,10 @@
                     </p>
                     <div class="field has-addons">
                       <div class="control">
+                        <input type="hidden" id="afbbc" name="l" value="afbbc974-e163-4467-be49-040e399520f3">
                         <input
                           class="input"
-                          name="EMAIL"
+                          name="email"
                           id="mce-EMAIL"
                           type="email"
                           placeholder="Your work email address"
