--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -25,6 +25,15 @@
   <link rel="manifest" href="/assets/images/products/bytebuilders/icons/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/assets/images/products/bytebuilders/icons/ms-icon-144x144.png">
+  {{ if .Resources.GetMatch "hero.jpg" }}
+    {{ $original := .Resources.GetMatch "hero.jpg" }}
+    {{ $cropped := $original.Fill "1300x650" }}
+    <meta property="og:image" content="{{ $cropped.RelPermalink }}"/>
+  {{ else }}
+    <meta property="og:image" content="/assets/images/products/bytebuilders/bytebuilders-1280x640.png"/>
+  {{ end }}
+  <meta property="og:title" content="{{ .Title }}"/>
+  <meta property="og:description" content="{{ $.Site.Title }}"/>
   <!-- font-awesome css  -->
   <link rel="stylesheet" href="/assets/css/font-awesome.min.css" />
   <!-- AOS css  -->
